# esk

./: .gitignore  ADAPTERS.md  AGENTS.md  API.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  PLUGINS.md  README.md  REMOTES.md  TARGETS.md  install.sh
.beads/: issues.jsonl
.cargo/: config.toml
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
docs/: coding-guidelines.md  esk.example.yaml  idiomatic-cleanup-spec.md  llm.md  overview-diagram.json
scripts/: test-env.sh
src/: config.rs  deploy_tracker.rs  lib.rs  main.rs  orphan.rs  plugin_tracker.rs  reconcile.rs  remote_tracker.rs  store.rs  suggest.rs  sync_tracker.rs  tracker.rs  ui.rs  validate.rs
src/adapters/: aws_ssm.rs  cloudflare.rs  convex.rs  env_file.rs  fly.rs  github.rs  gitlab.rs  heroku.rs  kubernetes.rs  mod.rs  netlify.rs  onepass.rs  onepassword.rs  railway.rs  supabase.rs  vercel.rs
src/cli/: delete.rs  deploy.rs  generate.rs  get.rs  init.rs  list.rs  llm_context.rs  mod.rs  pull.rs  push.rs  set.rs  status.rs  sync.rs
src/cli/deploy/: execute.rs  mod.rs  plan.rs  report.rs  types.rs
src/cli/doctor/: build.rs  mod.rs  render.rs  types.rs
src/cli/generate_helpers/: optional_bool.js  optional_env.js  optional_float.js  optional_int.js  optional_json.js  required_bool.js  required_env.js  required_float.js  required_int.js  required_json.js
src/cli/status/: build.rs  mod.rs  render.rs  types.rs
src/mcp/: mod.rs  types.rs
src/plugins/: aws_secrets_manager.rs  azure.rs  bitwarden.rs  cloud_file.rs  doppler.rs  gcp.rs  mod.rs  onepassword.rs  s3.rs  sops.rs  vault.rs
src/remotes/: aws_secrets_manager.rs  azure_key_vault.rs  bitwarden.rs  cloud_file.rs  doppler.rs  gcp_secret_manager.rs  hashicorp_vault.rs  infisical.rs  mod.rs  onepassword.rs  s3.rs  sops.rs
src/targets/: aws_lambda.rs  aws_ssm.rs  azure_app_service.rs  circleci.rs  cloudflare.rs  convex.rs  custom.rs  docker.rs  dotenv.rs  env_file.rs  fly.rs  gcp_cloud_run.rs  github.rs  gitlab.rs  heroku.rs  kubernetes.rs  mod.rs  netlify.rs  railway.rs  render.rs  supabase.rs  vercel.rs
src/test_support/: mod.rs
tests/: cli_integration.rs  dotenv_integration.rs  env_file_integration.rs  reconcile_integration.rs  store_integration.rs
tests/helpers/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
