[workspace]
members = [".", "xtask"]

[package]
name = "lockbox"
version = "0.1.0"
edition = "2021"
description = "Encrypted secrets management with multi-target sync"
authors = ["Thomas LE JEUNE"]
license = "MIT"
repository = "https://github.com/thomastheyoung/lockbox"
homepage = "https://github.com/thomastheyoung/lockbox"
keywords = ["secrets", "encryption", "cli", "sync", "dotenv"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
fs2 = "0.4"
console = "0.16"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/lockbox-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "lockbox-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/lockbox-{ target }.zip"
pkg-fmt = "zip"
