[workspace]
members = [".", "xtask"]

[package]
name = "esk"
version = "0.5.2"
edition = "2021"
description = "Encrypted Secrets Keeper with multi-target deploy"
authors = ["Thomas LE JEUNE"]
license = "MIT"
repository = "https://github.com/thomastheyoung/esk"
homepage = "https://github.com/thomastheyoung/esk"
keywords = ["secrets", "api", "keys", "encryption", "cli", "sync", "dotenv", "1password", "dropbox"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
fs2 = "0.4"
console = "0.16"
hex = "0.4"
rand = "0.8"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/esk-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "esk-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/esk-{ target }.zip"
pkg-fmt = "zip"
